--- a/src/ex2-Lastname-messfern.ipynb
+++ b/src/ex2-Lastname-messfern.ipynb
@@ -14,10 +14,13 @@
     "- Date: YYYY-MM-DD\n",
     "\n",
     "Four figures should be generated:\n",
-    "- ex2fig1-Lastname-Messfern.png: Map of bathymetry\n",
-    "- ex2fig2-Lastname-Messfern.png: Second map of bathymetry\n",
+    "- ex2fig1-Lastname-Messfern.png: (matplotlib) Map of bathymetry\n",
+    "- ex2fig2-Lastname-Messfern.png: (cartopy) Second map of bathymetry\n",
+    "- ex2fig3-Lastname-Messfern.png: (cartopy) Create a map with your own region.\n",
     "\n",
     "Packages: You will need to install the package `netCDF4` and `cartopy`, and - if you choose to do the \"extra challenge\" - `cmocean`.\n",
+    "\n",
+    "The first time you run through this, \n",
     "<hr>"
    ]
   },
@@ -44,67 +47,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "791403cb",
-   "metadata": {},
-   "source": [
-    "# URL for the bathymetry data\n",
-    "\n",
-    "1. Navigate to [ETOPO bathymetry](https://www.ncei.noaa.gov/products/etopo-global-relief-model)\n",
-    "\n",
-    "2. Launch grid extract.  Choose ETOPO_2022 (Bedrock; 60 arcseconds)\n",
-    "\n",
-    "3. Choose an area of interest, e.g. 66N, 63N, 35W (-35) and 25W (-25).\n",
-    "\n",
-    "4. Download data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "47870f9f-8f47-4804-bed8-072fdfbb6f12",
+   "execution_count": 27,
+   "id": "13d357b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'netCDF4.Dataset'>\n",
-      "root group (NETCDF4 data model, file format HDF5):\n",
-      "    dimensions(sizes): lon(600), lat(180)\n",
-      "    variables(dimensions): float32 lon(lon), float32 lat(lat), float32 z(lat, lon)\n",
-      "    groups: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rootdir = '/Users/eddifying/Cloudfree/gitlab-cloudfree/messfern-plot/bathy/'\n",
-    "bathymetry_data_path = rootdir + 'data/ETOPO_2022_v1_60s_N90W180_bed.nc'\n",
-    "bathymetry_data = get_bathymetry_data()\n",
-    "\n",
-    "# Choose your area of interest\n",
-    "min_lon = -35\n",
-    "max_lon = -25\n",
-    "min_lat = 63\n",
-    "max_lat = 66\n",
-    "\n",
-    "bathymetry_subset = get_bathymetry_subset_data(\n",
-    "    bathymetry_data,\n",
-    "    min_lon, max_lon,\n",
-    "    min_lat, max_lat\n",
-    ")\n",
-    "\n",
-    "bathymetry_data = BathymetryDataSingleton()\n",
-    "bathymetry_data.set(bathymetry_subset)\n",
-    "print(bathymetry_subset)\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Set some paths\n",
+    "# Root directory - change this to the directory where you are working.\n",
+    "rootdir = '/Users/eddifying/Cloudfree/gitlab-cloudfree/messfern-plot-bathy/'\n",
+    "os.chdir(rootdir)\n",
+    "datadir = rootdir + 'data/'\n",
     "\n",
     "# Output file paths for figures\n",
     "figdir = '../figures/'\n",
     "if not os.path.exists(figdir):\n",
     "    os.makedirs(figdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "47870f9f-8f47-4804-bed8-072fdfbb6f12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the bathymetry data"
    ]
   },
   {
@@ -125,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "bbf42705-d069-43e5-b62e-47737ab8c0f2",
    "metadata": {},
    "outputs": [
@@ -170,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "f42a3409",
    "metadata": {},
    "outputs": [
@@ -220,12 +188,121 @@
     "- Add a legend that specifies \"DS2 mooring\" for the circle\n",
     "- Turn off latitude markers on the right hand side of the plot\n",
     "- Install the `cmocean` package, and change the color scale to something appropriate for bathymetry\n",
+    "- Crop the bathymetry so that it fills a region with the aspect ratio 16 x 26 cm.  Then resize the figure itself so that the figure plot generated is 16 x 26 cm.\n",
     "\n",
     "\n",
     "- **Extra challenge:** Mark the deepest point on the map with a square\n",
     "\n",
     "Check that your figure output to the `figures/` directory has these new updates.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "756c7376",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Instructions to Download Bathymetry Data\n",
+    "\n",
+    "1. Navigate to the [ETOPO bathymetry](https://www.ncei.noaa.gov/products/etopo-global-relief-model) website.\n",
+    "2. Launch the grid extract tool.\n",
+    "3. Choose the ETOPO_2022 dataset (Bedrock; 60 arcseconds).\n",
+    "4. Select your area of interest, for example, 66N, 63N, 35W (-35) and 25W (-25).\n",
+    "5. Download the data file to your local machine.\n",
+    "6. Save the downloaded file to the path specified in `bathymetry_data_path`.  For me this is:\n",
+    "    ```\n",
+    "    /Users/eddifying/Cloudfree/gitlab-cloudfree/messfern-plot/bathy/data/ETOPO_2022_v1_60s_N90W180_bed.nc\n",
+    "    ```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8a6ac218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'netCDF4.Dataset'>\n",
+      "root group (NETCDF4 data model, file format HDF5):\n",
+      "    dimensions(sizes): lon(600), lat(180)\n",
+      "    variables(dimensions): float32 lon(lon), float32 lat(lat), float32 z(lat, lon)\n",
+      "    groups: \n"
+     ]
+    }
+   ],
+   "source": [
+    "bathymetry_data_path = datadir + 'ETOPO_2022_v1_60s_N90W180_bed.nc'\n",
+    "bathymetry_data = get_bathymetry_data()\n",
+    "\n",
+    "# Choose your area of interest\n",
+    "min_lon = -35\n",
+    "max_lon = -25\n",
+    "min_lat = 63\n",
+    "max_lat = 66\n",
+    "\n",
+    "bathymetry_subset = get_bathymetry_subset_data(\n",
+    "    bathymetry_data,\n",
+    "    min_lon, max_lon,\n",
+    "    min_lat, max_lat\n",
+    ")\n",
+    "\n",
+    "bathymetry_data = BathymetryDataSingleton()\n",
+    "bathymetry_data.set(bathymetry_subset)\n",
+    "print(bathymetry_subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c79a2d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bathymetry subset written to /Users/eddifying/Cloudfree/gitlab-cloudfree/messfern-plot-bathy/data/bathymetry_subset.nc\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the bathymetry_subset to an xarray Dataset\n",
+    "ds = xr.Dataset(\n",
+    "    {\n",
+    "        \"z\": ([\"lat\", \"lon\"], bathymetry_subset.variables['z'][:])\n",
+    "    },\n",
+    "    coords={\n",
+    "        \"lat\": ([\"lat\"], bathymetry_subset.variables['lat'][:]),\n",
+    "        \"lon\": ([\"lon\"], bathymetry_subset.variables['lon'][:])\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Define the output path for the NetCDF file\n",
+    "output_path = os.path.join(datadir, 'bathymetry_subset.nc')\n",
+    "\n",
+    "# Write the dataset to a NetCDF file\n",
+    "ds.to_netcdf(output_path)\n",
+    "\n",
+    "print(f\"Bathymetry subset written to {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de7d8a28",
+   "metadata": {},
+   "source": [
+    "## Repeat the cartopy plot, but with your region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "338c1452",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
